Sis2Rcio/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;E:\UMSS\INFORMÁTICA\3 Semestre\MTTP\Java\CompraVenta\json-simple-1.1.1.jar;E:\UMSS\INFORMÁTICA\3 Semestre\MTTP\Java\CompraVenta\AbsoluteLayout-RELEASE130.jar;C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio
-d
C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio\doc
-encoding
UTF-8
-charset
UTF-8
C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio\HistoriaDeUsuario.java
<---- end of javadoc command ---->
Loading source file C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio\HistoriaDeUsuario.java...
Constructing Javadoc information...
C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio\HistoriaDeUsuario.java:1: error: cannot find symbol
import java.util.LocalDate;
                ^
  symbol:   class LocalDate
  location: package java.util
C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio\HistoriaDeUsuario.java:15: error: cannot find symbol
    private LocalDate fecha;
            ^
  symbol:   class LocalDate
  location: class HistoriaDeUsuario
C:\GitHub\Sis2TDD\Sis2Rocio\Sis2Rcio\HistoriaDeUsuario.java:103: error: cannot find symbol
    public void setDate(Date date){
                        ^
  symbol:   class Date
  location: class HistoriaDeUsuario
3 errors
